--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -27,28 +27,32 @@
                                     <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="P5f-CE-JOn"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0Q-7S-DIi">
-                                <rect key="frame" x="110" y="462" width="155" height="155"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click To Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tye-R7-lrn">
+                                <rect key="frame" x="128" y="419" width="120" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="200" verticalHuggingPriority="200" preservesSuperviewLayoutMargins="YES" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0Q-7S-DIi">
+                                <rect key="frame" x="156" y="448" width="63" height="63"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="63" id="ngK-Fe-nJp"/>
+                                    <constraint firstAttribute="height" constant="63" id="rcm-li-Jba"/>
+                                </constraints>
                                 <state key="normal" image="Stop"/>
                                 <connections>
                                     <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5RP-tU-3zo"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click To Record" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tye-R7-lrn">
-                                <rect key="frame" x="127.5" y="419" width="119.5" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="jJx-fs-ADM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1G8-c3-qhU"/>
-                            <constraint firstItem="d0Q-7S-DIi" firstAttribute="top" secondItem="tye-R7-lrn" secondAttribute="bottom" constant="22" id="arN-Ml-zyy"/>
-                            <constraint firstItem="tye-R7-lrn" firstAttribute="top" secondItem="jJx-fs-ADM" secondAttribute="bottom" constant="8" id="jVC-eg-eCO"/>
-                            <constraint firstItem="tye-R7-lrn" firstAttribute="centerX" secondItem="jJx-fs-ADM" secondAttribute="centerX" id="kYh-sX-EMP"/>
-                            <constraint firstItem="d0Q-7S-DIi" firstAttribute="centerX" secondItem="tye-R7-lrn" secondAttribute="centerX" id="sFM-U8-z2i"/>
-                            <constraint firstItem="jJx-fs-ADM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="seK-a1-Sg5"/>
+                            <constraint firstItem="jJx-fs-ADM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PUl-Pa-7Zk"/>
+                            <constraint firstItem="tye-R7-lrn" firstAttribute="top" secondItem="jJx-fs-ADM" secondAttribute="bottom" constant="8" id="Pw1-z0-AVB"/>
+                            <constraint firstItem="jJx-fs-ADM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="RGZ-Ux-ELf"/>
+                            <constraint firstItem="tye-R7-lrn" firstAttribute="centerX" secondItem="jJx-fs-ADM" secondAttribute="centerX" id="Wui-z8-VLp"/>
+                            <constraint firstItem="d0Q-7S-DIi" firstAttribute="centerX" secondItem="tye-R7-lrn" secondAttribute="centerX" id="dKc-Im-HzZ"/>
+                            <constraint firstItem="d0Q-7S-DIi" firstAttribute="top" secondItem="tye-R7-lrn" secondAttribute="bottom" constant="8" id="ikb-Of-R52"/>
                         </constraints>
                     </view>
                     <connections>
@@ -59,7 +63,6 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="125.59999999999999" y="37.331334332833585"/>
         </scene>
     </scenes>
     <resources>
