--- a/Pitch Perfect/Base.lproj/Main.storyboard
+++ b/Pitch Perfect/Base.lproj/Main.storyboard
@@ -86,39 +86,57 @@
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="eY7-rV-qlH">
                                         <rect key="frame" x="0.0" y="0.0" width="374" height="168"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBK-dC-0oN" userLabel="HighPitch Button">
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBK-dC-0oN" userLabel="HighPitch Button">
                                                 <rect key="frame" x="0.0" y="0.0" width="187" height="168"/>
                                                 <state key="normal" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="NeP-a6-HlY" eventType="touchUpInside" id="1Kl-eD-ajz"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKN-9Y-MFV" userLabel="LowPitch Button">
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKN-9Y-MFV" userLabel="LowPitch Button">
                                                 <rect key="frame" x="187" y="0.0" width="187" height="168"/>
                                                 <state key="normal" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="NeP-a6-HlY" eventType="touchUpInside" id="clo-ZB-A8u"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="mZa-Ev-MvU">
                                         <rect key="frame" x="0.0" y="168" width="374" height="168"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5le-tz-e4q" userLabel="Echo">
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5le-tz-e4q" userLabel="Echo">
                                                 <rect key="frame" x="0.0" y="0.0" width="187" height="168"/>
                                                 <state key="normal" image="Echo"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="NeP-a6-HlY" eventType="touchUpInside" id="myj-ct-VSl"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQU-9i-iQg" userLabel="Reverb">
+                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aQU-9i-iQg" userLabel="Reverb">
                                                 <rect key="frame" x="187" y="0.0" width="187" height="168"/>
                                                 <state key="normal" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="NeP-a6-HlY" eventType="touchUpInside" id="uic-1o-LUl"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="11B-7E-X9Q">
                                         <rect key="frame" x="0.0" y="336" width="374" height="168"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rqM-08-yMG" userLabel="Fast Button">
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rqM-08-yMG" userLabel="Fast Button">
                                                 <rect key="frame" x="0.0" y="0.0" width="187" height="168"/>
                                                 <state key="normal" image="Fast"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="NeP-a6-HlY" eventType="touchUpInside" id="P96-68-GEl"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T0G-AS-T64" userLabel="Slow Button">
                                                 <rect key="frame" x="187" y="0.0" width="187" height="168"/>
                                                 <state key="normal" image="Slow"/>
+                                                <connections>
+                                                    <action selector="playSoundForButton:" destination="NeP-a6-HlY" eventType="touchUpInside" id="wi3-Ae-I4U"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -128,6 +146,9 @@
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ufO-Gh-8nT">
                                                 <rect key="frame" x="0.0" y="0.0" width="374" height="168"/>
                                                 <state key="normal" image="Stop-1"/>
+                                                <connections>
+                                                    <action selector="stopButtonPressed:" destination="NeP-a6-HlY" eventType="touchUpInside" id="BLD-hl-mXl"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                     </stackView>
@@ -142,6 +163,15 @@
                             <constraint firstAttribute="trailingMargin" secondItem="Q0Y-Gh-vio" secondAttribute="trailing" id="qqE-ez-YAg"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="chipmunkButton" destination="rqM-08-yMG" id="2Uy-iL-oVd"/>
+                        <outlet property="echoButton" destination="5le-tz-e4q" id="8gc-vb-tlD"/>
+                        <outlet property="rabbitButton" destination="dBK-dC-0oN" id="sn3-cV-WtI"/>
+                        <outlet property="reverbButton" destination="aQU-9i-iQg" id="BFP-MW-K8P"/>
+                        <outlet property="snailButton" destination="T0G-AS-T64" id="yO8-i9-gHg"/>
+                        <outlet property="stopButton" destination="ufO-Gh-8nT" id="YBJ-bl-bPV"/>
+                        <outlet property="vaderButton" destination="oKN-9Y-MFV" id="2vj-oW-PBW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yFe-Lv-MGd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
